[package]
name = "paillier-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = {version = "0.2.6", features = ["rand"]}
num-integer = "0.1.44"
num-primes = "0.1.2"
num-traits = "0.2.14"
rand = "0.5.6"