[package]
name = "paillier-rs"
authors = ["MathxH Chen <brainfvck@foxmail.com>"]
description = "Paillier Cryptosystem Implementation"
version = "0.1.0"
edition = "2021"
keywords = ["paillier-crypto", "homomorphic encryption", "asymmetric algorithm", "public key cryptography"]
license = "MIT"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = {version = "0.2.6", features = ["rand"]}
num-integer = "0.1.44"
num-primes = "0.1.2"
num-traits = "0.2.14"
num-bigint-dig = "0.8.2"
rand = "0.5.6"